# rovio

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  bagged.rviz  mainpage.dox  package.xml  rovio_eschlikon.rviz
cfg/: M600-rs_D435_down_intel.yaml  calibration.yaml  domi_cam0.yaml  domi_cam1.yaml  domi_cam2.yaml  domi_cam3.yaml  domi_cam4.yaml  euroc_cam0.yaml  euroc_cam0_new.yaml  euroc_cam1.yaml  imgui.ini  imu.yaml  intel1_cam.yaml  lidar_depth.yaml  lidarstick.info  lidarstick_180_cam0.yaml  lidarstick_180_cam1.yaml  lidarstick_rovio.info  p22021_equidist.yaml  pvg_rovio.info  pvg_rovio_uzhfpv_45.info  pvg_rovio_uzhfpv_forward.info  pvg_uzhfpv_base.info  rovio.info  rovio_BU.info  rovio_M600.info  rovio_cam0.yaml  rovio_cam1.yaml  rovio_custom.info_new  rovio_domi.info  rovio_domi.info_new  rovio_down.info  rovio_equidist_cam0_p23022.yaml  rovio_equidist_cam1_p23022.yaml  rovio_eschlikon_visualizing.info  rovio_euroc.info  rovio_filter_adis_p23022.info  rovio_filter_adis_p23022.info_new  rovio_intel1.info  rovio_longwalk_cam0.yaml  (+19 more)
cmake/: FindEigen3.cmake
include/: Camera.hpp  CameraOutputCF.hpp  FilterState.hpp  ImgUpdate.hpp  ImuPrediction.hpp  PixelOutputCF.hpp  YprOutputCF.hpp  binary-serialization.h  camera.hpp  common_vision.hpp  common_vision_new.hpp  common_vision_old.hpp  ros-camera.h  rovio_filter.hpp  rovio_node.hpp
include/monolidar_fusion/: Converter.h.unused  DepthCalcHistBag.h  DepthCalcHistPoint.h  DepthCalcStatsSinglePoint.h  DepthCalculationStatistics.h  DepthEstimator.h  DepthEstimatorParameters.h  ErrorPlane.h  GeometryHelper.h  HelperLidarRowSegmentation.h  Histogram.h  HistogramBin.h  HistogramPointDepth.h  LinePlaneIntersectionBase.h  LinePlaneIntersectionCeckXZTreshold.h  LinePlaneIntersectionNormal.h  LinePlaneIntersectionOrthogonalTreshold.h  Logger.h  NNParams.h  NeighborFinderBase.h  NeighborFinderKdd.h.unused  NeighborFinderPixel.h  PCA.h  PlaneEstimationCalcMaxSpanningTriangle.h  PlaneEstimationCheckPlanar.h  PlaneEstimationLeastSquares.h  PlaneEstimationMEstimator.h  PointData.h  PointcloudData.h  RansacPlane.h  RoadDepthEstimatorBase.h  RoadDepthEstimatorLeastSquares.h  RoadDepthEstimatorMEstimator.h  RoadDepthEstimatorMaxSpanningTriangle.h  TresholdDepthGlobal.h  TresholdDepthLocal.h  camera_pinhole.h  eDepthResultType.h  eTresholdDepthMode.h  eTresholdResult.h
include/rovio/: Backend.hpp  Camera.hpp  CameraOutputCF.hpp  FeatureBearingOutputCF.hpp  FeatureCoordinates.hpp  FeatureDepthOutputCF.hpp  FeatureDistance.hpp  FeatureLocationOutputCF.hpp  FeatureManager.hpp  FeatureStatistics.hpp  FeatureWarping.hpp  FilterState.hpp  FilterStates.hpp  HealthMonitor.hpp  ImageMask.hpp  ImagePyramid.hpp  ImgUpdate.hpp  ImuPrediction.hpp  MultiCamera.hpp  MultilevelPatch.hpp  MultilevelPatchAlignment.hpp  Patch.hpp  PixelOutputCF.hpp  PoseUpdate.hpp  RobocentricFeatureElement.hpp  RovioFilter.hpp  RovioNode.hpp  RovioScene.hpp  Scene.hpp  VelocityUpdate.hpp  YprOutputCF.hpp  ZeroVelocityUpdate.hpp  commonVision.hpp  common_vision.hpp  common_vision2.hpp  exceptions.hpp  featureTracker.hpp  feature_tracker.hpp  rovioFilter.hpp  rovio_filter.hpp  (+1 more)
include/rovio/CoordinateTransform/: CameraOutput.hpp  CameraOutputCF.hpp  FeatureOutput.hpp  FeatureOutputReadable.hpp  LandmarkOutput.hpp  PixelOutput.hpp  RovioOutput.hpp  YprOutput.hpp  YprOutputCF.hpp
launch/: arche.launch  bagged.launch  config.rviz  demo_eschlikon.launch  demo_pr2.launch  demo_robot_mapping.launch  eschlikon.launch  longwalk.launch  pvg_rovio_euroc_rosbag.launch  pvg_rovio_uzhfpv_rosbag.launch  rovio_M600.launch  rovio_difficult.launch  rovio_domi.launch  rovio_intel1.launch  rovio_mavros-realsense.launch  rovio_mavros_rs.launch  rovio_node.launch  rovio_node_orig.launch  rovio_rosbag_node.launch  rovio_rosbag_vicon.launch  rtabmap.launch  run_rovio_with_bagfile.launch  test_rovio.launch  valgrind_rovio.launch  vicon_easy.launch  vicon_hard.launch  voliroT_easy.launch  voliroT_hard.launch
msg/: BackendMsg.msg  RovioOutput.msg
shaders/: shader.fs  shader.vs
src/: Camera.cpp  DepthCalculationStatistics.cpp  DepthEstimator.cpp  DepthEstimatorParameters.cpp  FeatureCoordinates.cpp  FeatureDistance.cpp  GeometryHelper.cpp  HelperLidarRowSegmentation.cpp  Histogram.cpp  HistogramPointDepth.cpp  LinePlaneIntersectionBase.cpp  LinePlaneIntersectionCeckXZTreshold.cpp  LinePlaneIntersectionNormal.cpp  LinePlaneIntersectionOrthogonalTreshold.cpp  Logger.cpp  NeighborFinderBase.cpp  NeighborFinderKdd.cpp.unused  NeighborFinderPixel.cpp  PCA.cpp  PlaneEstimationCalcMaxSpanningTriangle.cpp  PlaneEstimationCheckPlanar.cpp  PlaneEstimationLeastSquares.cpp  PlaneEstimationMEstimator.cpp  RansacPlane.cpp  RoadDepthEstimatorBase.cpp  RoadDepthEstimatorLeastSquares.cpp  RoadDepthEstimatorMEstimator.cpp  RoadDepthEstimatorMaxSpanningTriangle.cpp  Scene.cpp  TresholdDepthGlobal.cpp  TresholdDepthLocal.cpp  feature_tracker_node.cpp  init_rovio_enu.py  ros-camera.cc  rovioNode.cpp  rovio_node.cpp  rovio_rosbag_loader.cpp  testVision.cpp  test_mlp.cpp  test_patch.cpp  (+1 more)
srv/: SrvResetToPose.srv
